--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
@@ -24,7 +22,6 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vitest": "^0.28.3"
+    "vite": "^4.0.0"
   }
 }
